# apsimNGpy

./: .RData  .Rhistory  .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  MANIFEST.in  README.html  README.md  README.rst  Usage.html  __init__.py  alert.rst  api.html  api_gen.py  api_generator.py  apsimNGpy.core.html  cli.html  config.ini  config.py  documnetation.yml  factorial_experiments.html  faq.md  genindex.html  getting started.html  index.html  md.md  mkdocs.yml  model inspection.html  modules.html  new_api.py  other examples.rst  pyproject.toml  readthedocs.yml  required_packages.py  requirements.txt  residues.rst  search.html  settings.py  setup.py  (+1 more)
.Rproj.user/5021BD03/: rmd-outputs
.github/workflows/: documentation.yml  static.yml
apsimNGpy/: .env  CITATION.cff  D:\package\fun_evaluation.db  README.RST  READMEt.rst  Visualisation.py  __init__.py  add.py  api.py  apsimpy.py  apsimx2py.py  base_data.py  changelog.txt  config.ini  config.py  configs.ini  cropmanager.py  down.py  exceptions.py  logger.py  maizee.db  pythonet_config.py  pythonnet_manager.py  release.py  remote.py  requirements.txt  run_utils.py  settings.py  soil2apsimx.py  utils.py  version.py  weather.py
apsimNGpy/.cached/: cache.db  cache.db-shm  cache.db-wal
apsimNGpy/Data/: EXPERIMENT_2py.apsimx.bak  EXPERIMENT_2py.db-shm  EXPERIMENT_NT.apsimx  NewMetrrr.met  agpasture.apsimx  base_data.py  corn_base_swim.apsimx  corn_base_swim3.apsimx  remote.py
apsimNGpy/_server/: __init__.py  _client.py  app.py  f_0fe45b1d-9aec-4f95-913e-e2c666f05ca0.apsimx  f_0fe45b1d-9aec-4f95-913e-e2c666f05ca0.db  main.py  sessions.py  test_app.py  tests.py  utils.py  utils2.py  zm_gpt.py  zmq_example.py
apsimNGpy/base/: SWIM.apsimx  apsimNGpy.json  base_data.py  check.py  maize.apsimx
apsimNGpy/basefiles/: SWIM2.apsimx  corn_baseclone.apsimx  covercrp_test.apsimx  swim4.apsimx  swimx.apsimx  switchhgrass_prototype.apsimx  test.apsimx  testx.apsimx
apsimNGpy/bin_loader/: README  resources.py
doc/: FAQ.rst  OPT.rst  Tutorial.rst  Usage.rst  alert.rst  api.rst  api_generator.py  app_multi_process.rst  calibrate.rst  change_logs.rst  cheat.rst  comp_cultivar.rst  conf.py  contribute.rst  decision_making.rst  edit.rst  edit_by_path.rst  evaluate.rst  examples.ipynb  factorial_experiments.rst  getting started.rst  how_to_cite.rst  index.rst  inspect_model_paramaters  inspect_model_parameters.rst  instantiating.rst  manage_env.rst  model inspection.rst  moo.rst  mult_core.rst  new_experiment.rst  plotting.rst  preview.rst  releases.rst  robot.txt  sens.rst  sens2.rst  sitemap.xml  soil_refill.rst  version_control.rst  (+4 more)
docs/: .nojekyll  .readthedocs.yml  FAQ.rst  Makefile  OPT.rst  README.md  Usage.rst  api.rst  api_documentation.md  apsimNGpy.apsimNGpy.core.rst  apsimNGpy.apsimNGpy.manager.rst  apsimNGpy.apsimNGpy.simulations.rst  apsimNGpy.apsimNGpy.utililies.rst  apsimNGpy.apsimNGpy.validation.rst  apsimNGpy.rst  cheat.rst  comp_cultivar.rst  conf.py  contribute.rst  custom_css.css  edit.rst  factorial_experiments.rst  getting started.rst  how_to_cite.rst  index.rst  inspect_model_parameters.rst  instantiating.rst  jf.py  manage_env.rst  model inspection.rst  modules.rst  moo.rst  mult_core.rst  new_experiment.rst  requirements.txt  searchindex.js  sponsor.rst  transfer.py  version_control.rst  weather.rst
docs2/: README.md  getting_started.ipynb  getting_started.md
source/: Usage.rst  apsimNGpy.core.rst  apsimNGpy.rst  apsimNGpy.validation.rst  apsimNGpy.visual.rst  cli.rst  conf.py  factorial_experiments.rst  index.rst  modules.rst  src.apsimNGpy.core.rst  src.apsimNGpy.core_utils.rst  src.apsimNGpy.experiment.rst  src.apsimNGpy.manager.rst  src.apsimNGpy.optimizer.rst  src.apsimNGpy.parallel.rst  src.apsimNGpy.tests.rst  src.rst
(+1100 files in other folders)
