[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apsimNGpy"
version = "0.39.2.1"
description = "Python interface for APSIM Next Generation for reproducible crop modeling workflows."
authors = [
    { name = "Richard Magala", email = "rmagala640@gmail.com" }
]
license = { text = "Apache 2.0" }
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["APSIM", "crop modeling", "agriculture", "simulation", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

dependencies = [
        'numpy>=1.20.0',
        'scipy>=1.7',
        'xmltodict >=0.13.0',
        'requests >=2.31.0',
        'pythonnet >= 3.0.1',
        'rasterio >=1.3.8',
        'shapely >=2.0.1',
        'clr >= 1.0.3',
        'geopandas >=0.13.2',
        'pandas >=2.0.3',
        'geopy >= 2.4.1',
        'joblib >= 1.3.2',
        'sqlalchemy >=2.0',
        'matplotlib',
        'psutil >=6.0.0',
        'tenacity',
        'typer',
        'wrapdisc==2.5.0',
        'summarytools>=0.3.0'
]

[project.urls]
Homepage = 'https://magala-richard.github.io/apsimNGpy-documentations/index.html'
Repository = "https://github.com/MAGALA-RICHARD/apsimNGpy"
Documentation = 'https://magala-richard.github.io/apsimNGpy-documentations/index.html'

[tool.setuptools]
packages = ["apsimNGpy"]
include-package-data = true

[tool.setuptools.package-data]
"apsimNGpy.templates" = ["*.json", "*.xml"]
"apsimNGpy.data" = ["*.apsimx"]

[tool.setuptools.dynamic]
version = { attr = "apsimNGpy.__version__" }

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
