[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apsimngpy"
version = '1.2.0'
description = "APSIM next generation package interface"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Richard Magala", email = "magalarich20@gmail.com" }
]
keywords = ["python", "APSIM Next Generation", "pythonnet", "crop modeling"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7",
    "xmltodict>=0.13.0",
    "requests>=2.31.0",
    "pythonnet>=3.0.1",
    "rasterio>=1.3.8",
    "shapely>=2.0.1",
    "clr>=1.0.3",
    "geopandas>=0.13.2",
    'seaborn >=0.13.2',
    "pandas>=2.0.3",
    "geopy>=2.4.1",
    "joblib>=1.3.2",
    "sqlalchemy>=2.0",
    "matplotlib",
    "psutil>=6.0.0",
    "tenacity",
    "typer",
    'pymoo',
    'tqdm==4.67.1',
    "wrapdisc==2.5.0",
    "SALib==1.5.2",
    'python-dotenv>=1.0.1,<2.0.0',
    "summarytools>=0.3.0",
     'watchdog==6.0.0',
    'loguru == 0.7.3'
]

[project.urls]
Homepage = "https://github.com/MAGALA-RICHARD/apsimNGpy.git"

[tool.setuptools]
packages = ["apsimNGpy"]
include-package-data = true

[tool.setuptools.package-data]
"apsimNGpy" = [
    "data/*.apsimx",
    "*.met",
    './apsimNGpy/*.dll',
    './apsimNGpy/dll/*.dll',
    "experiment/*.py",
    "examples/*.png",
    "images/*.png",
    "*.ini"
]

[project.scripts]
apsim = "apsimNGpy.cli.cli:main_entry_point"
bp = "apsimNGpy.cli.set_ups:apsim_bin_path"
apsim_bin_path = "apsimNGpy.cli.set_ups:apsim_bin_path"
